# brainstorm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  pyci.yml  tests.yml  wemake-python-styleguide-lint.yml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py  game_engine.py
brainstorm/: __main__.py  config.py
brainstorm/db/: models.py  schema.py  stats
brainstorm/games/: __init__.py  calc.py  gcd.py  prime.py  progression.py
brainstorm/scripts/: cli.py  engine.py
brainstorm/utils/: colors.py  game.py  menu.py  player.py
docs/: games.md  games.rst
oasis/: __init__.py  __main__.py  cli.py  config.py  engine.py
oasis/config/: config.py  constants.py
oasis/db/: models.py  schema.py  stats
oasis/games/: __init__.py  calc.py  even.py  gcd.py  list.py  prime.py  progression.py
oasis/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  engine.py
oasis/utils/: colors.py  game.py  menu.py  player.py
src/: engine.py
src/games/: __init__.py  prime.py
src/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
tests/: helpers.py  test_cli.py  test_engine.py  test_main.py  test_oasis.py
tests/games/: test_calc.py  test_even.py  test_gcd.py  test_prime.py  test_progression.py
tests/utils/: test_menu.py
