[tool.poetry]
name = "oasis"
version = "0.1.8"
description = "A set of five console games built on the principle of popular mobile applications for brain pumping."
authors = ["Boris Zhenikhov <znhv@yandex.com>"]

license = "MIT"

readme = "README.md"

packages = [
  { include = "oasis" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "oasis.scripts.brain_games:main"
brain-even = "oasis.scripts.brain_even:main"
brain-calc = "oasis.scripts.brain_calc:main"
brain-gcd = "oasis.scripts.brain_gcd:main"
brain-progression = "oasis.scripts.brain_progression:main"
brain-prime = "oasis.scripts.brain_prime:main"